Fixed alignment of menu text against font-icon images on expanded admin menu

--- a/resources/assets/scss/inadmin/styles.scss
+++ b/resources/assets/scss/inadmin/styles.scss
@@ -42,7 +42,7 @@ $admin__container-add-button: #069;
 			display: none;
 		}
 		li.admin__nav-expand {
-			margin-top: 30px;
+			margin-top: 50px;
 		}
 	}
 
@@ -53,6 +53,13 @@ $admin__container-add-button: #069;
 			li {
 				margin: 10px 5px;
 				text-align: left;
+
+				span {
+    				display: inline-block;
+    				height: 1.8em;
+    				padding-left: 5px;
+					vertical-align: middle;
+    			}
 			}
 
 			ul {
@@ -64,7 +71,7 @@ $admin__container-add-button: #069;
 			display: none;
 		}
 		li.admin__nav-collapse {
-			margin-top: 30px;
+			margin-top: 50px;
 		}
 
 		.button.admin__add-content {
@@ -73,7 +80,7 @@ $admin__container-add-button: #069;
 			width: 5em;
 
 			span {
-				display: inline;
+				display: inline-block;
 			}
 		}
 	}
@@ -112,7 +119,7 @@ $admin__container-add-button: #069;
 		background-color: $admin__container-add-button;
 		border: 1px solid darken($admin__container-add-button, 10%);
 		display: block;
-		margin:5px auto 10px auto;
+		margin:5px auto 50px auto;
 		padding: 0;
 
 		&:hover {
@@ -123,6 +130,9 @@ $admin__container-add-button: #069;
 
 		& span {
 			display: none;
+			height: auto;
+			margin-top: -10px;
+			padding: 0 0 0 10px;
 		}
 	}
 }
